# from-jupyter-to-production-monitoring

./: .pre-commit-config.yaml  LICENSE  docker-compose.yaml  pyproject.toml
api/: Dockerfile  app.py  load.py  models.py  pyproject.toml  reports.py  requirements.txt
api/api/: app.py  load.py  models.py  predictions.py  reports.py
dashboard/: Dockerfile  app.py  pyproject.toml  requirements.txt
dashboard/utils/: ui.py
data/: reference_data.csv
