[tool.poetry]
name = "fastapi-monitoring"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
evidently="*"
fastapi={version="*", extras=["all"]}
pandas="*"
requests="*"
onnxruntime = "*"
sqlmodel = "*"
streamlit = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
