[project]
name = "from-jupyter-to-production-monitoring-api"
version = "2025.03.14"
requires-python = ">=3.12"

dependencies = [
  "evidently",
  "pandas",
  "onnxruntime",
  "sqlmodel",
  "fastapi[standard]",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # fastapi
  "FAST",
]
