
[project]
name = "from-jupyter-to-production-monitoring-dashboard"
version = "2025.03.14"
requires-python = ">=3.12"

dependencies = ["requests", "streamlit"]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
